--- a/style.css
+++ b/style.css
@@ -192,10 +192,10 @@ p{
 
 .daily-weather-date{
 	flex: 1;
-	/*height: 100%;*/
+	height: 100%;
 	display: flex;
 	flex-direction: column;
-	/*justify-content: space-around;*/
+	justify-content: space-between;
 	padding: 0 0.5rem;
 }
 
@@ -221,10 +221,10 @@ p{
 
 .daily-weather-stats{
 	flex: 1;
-	/*height: 100%;*/
+	height: 100%;
 	display: flex;
 	flex-direction: column;
-	/*justify-content: space-around;*/
+	justify-content: space-between;
 }
 .daily-weather-stats .temp-min{
 	opacity: 0.5;
