--- a/style.css
+++ b/style.css
@@ -1,339 +1,451 @@
-html{
-	font-size: 10px;
-	box-sizing: border-box;
-	background-image: linear-gradient(105deg , #12c2e942, #c471ed85, #f64f597d);
-	background-attachment: fixed;
-	background-size: cover;
+html {
+  font-size: 10px;
+  box-sizing: border-box;
+  background-image: linear-gradient(105deg, #12c2e942, #c471ed85, #f64f597d);
+  /*background-color: #12c2e942;*/
+  background-attachment: fixed;
+  background-size: cover;
 }
-html, body{
-	padding: 0;
-	margin: 0;
+html,
+body {
+  padding: 0;
+  margin: 0;
 }
-*, *:before, *:after{
-	box-sizing: inherit;
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
 }
-body{
-	background-color: rgb(255 255 255 / 08%);
-	min-height: 100vh;
-}
-
-p{
-	margin: 0;
-}
-
-#nav-bar{
-	width: 100%;
-	height: 5rem;
-	padding: 0.5rem 1rem;
-	margin-bottom: 1rem;
-	background-color: rgb(255 255 255 / 25%);
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
+body {
+  background-color: rgb(255 255 255 / 08%);
+  min-height: 100vh;
 }
 
-#logo{
-	font-size: 3rem;
-	color: white;
-	font-family: 'Courgette', cursive;
-	text-shadow: 1px 1px 4px #6a6a6a;
-	user-select: none;
+p {
+  margin: 0;
 }
 
-#search-bar{
-	width: 2.9rem;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	border-radius: 2rem;
-	background-color: rgb(255 255 255 / 50%);
-	box-shadow: 3px 3px 5px #ff53ff75;
-	transition: all 0.3s ease-out, border 0s;
-
+@keyframes dummy {
+  0% {
+    background-color: #80808024;
+  }
+  50% {
+    background-color: #8080808a;
+  }
+  100% {
+    background-color: #80808024;
+  }
 }
 
-
-#search-bar form{
-	width: 100%;
-	display: flex;
-
+.dummy-weather-now {
+  height: 30rem;
+}
+.dummy-weather {
+  height: 8rem;
+}
+.dummy-weather,
+.dummy-weather-now {
+  border-radius: 10px;
+  margin: 1rem 0;
+  animation-name: dummy;
+  animation-duration: 2s;
+  animation-timing-function: ease-in;
+  animation-iteration-count: infinite;
 }
 
-#search-bar.open{
-	border: 1px solid #fcd5fc;
-	width: 40%;
-}
-#search-bar.focused{
-	border-bottom-right-radius: 0;
-	border-bottom-left-radius: 0;
-}
-#search-icon, #loading-icon{
-	background-color: #ff97ff;
-	width: 2.9rem;
-	height: 2.9rem;
-	color: white;
-	padding: 0.4rem;
-	border-radius: 50%;
+.low-opacity {
+  opacity: 0.5;
 }
 
+#nav-bar {
+  width: 100%;
+  height: 5rem;
+  padding: 0.5rem 1rem;
+  margin-bottom: 1rem;
+  background-color: rgb(255 255 255 / 25%);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#logo {
+  font-size: 3rem;
+  color: white;
+  font-family: "Courgette", cursive;
+  text-shadow: 1px 1px 4px #6a6a6a;
+  user-select: none;
+}
+
+#search-bar {
+  width: 2.9rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 2rem;
+  background-color: rgb(255 255 255 / 50%);
+  box-shadow: 3px 3px 5px #ff53ff75;
+  transition: all 0.3s ease-out, border 0s;
+}
+
+#search-bar form {
+  width: 100%;
+  display: flex;
+}
+
+#search-bar.open {
+  border: 1px solid #fcd5fc;
+  width: 40%;
+}
+#search-bar.focused {
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+#search-icon,
+#loading-icon {
+  background-color: #ff97ff;
+  width: 2.9rem;
+  height: 2.9rem;
+  color: white;
+  padding: 0.4rem;
+  border-radius: 50%;
+}
 
 @keyframes rotate {
-	0%{
-		transform: rotate(0deg);
-	}
-	100%{
-		transform: rotate(360deg);
-	}
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
-#loading-icon{
-	display: none;
-	font-size: 1.9rem;
-	animation-name: rotate;
-	animation-duration: 1s;
-	animation-iteration-count: infinite;
-	animation-timing-function: ease-out;
+#loading-icon {
+  display: none;
+  font-size: 1.9rem;
+  animation-name: rotate;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-out;
 }
 
-#search-bar.loading #search-icon{
-	display: none;
+#search-bar.loading #search-icon {
+  display: none;
 }
-#search-bar.loading #loading-icon{
-	display: initial;
-}
-
-#search-bar.focused #search-icon{
-	border-bottom-left-radius: 0;
-}
-#search-input{
-	width: 0%;
-	/*color: #ff53ff;*/
-	color: black;
-	font-size: 1.6rem;
-	padding: 0rem;
-	background-color: transparent;
-	border: none;
-	outline: 0;
-	transition: all 0.3s linear;
+#search-bar.loading #loading-icon {
+  display: initial;
 }
 
-#search-bar.open #search-input{
-	width: 100%;
-	padding-left: 1rem;
+#search-bar.focused #search-icon {
+  border-bottom-left-radius: 0;
+}
+#search-input {
+  width: 0%;
+  /*color: #ff53ff;*/
+  color: black;
+  font-size: 1.6rem;
+  padding: 0rem;
+  background-color: transparent;
+  border: none;
+  outline: 0;
+  transition: all 0.3s linear;
 }
 
-#use-location-button{
-	width: 0;
-	height: 3rem;
-	border: none;
-	background: white;
-	color: gray;
-	font-size: 1.7rem;
-	padding-top: 0.3rem;
-	padding-bottom: 0.3rem;
-	border-radius: 1rem;
-	border-top-left-radius: 0;
-	border-top-right-radius: 0;
-	position: absolute;
-	opacity: 0;
-	display: none;
-}
-#search-bar.focused #use-location-button{
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	opacity: 1;
-}
-#use-location-button svg{
-	margin-right: 0.5rem;
+#search-bar.open #search-input {
+  width: 100%;
+  padding-left: 1rem;
 }
 
-
-#app{
-	width: 98%;
-	padding: 1rem;
-	background-color: rgb(255 255 255 / 30%);
-	margin: auto;
-	border-radius: 1rem;
+#use-location-button {
+  width: 0;
+  height: 3rem;
+  border: none;
+  background: white;
+  color: gray;
+  font-size: 1.7rem;
+  padding-top: 0.3rem;
+  padding-bottom: 0.3rem;
+  border-radius: 1rem;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+  position: absolute;
+  opacity: 0;
+  display: none;
+}
+#search-bar.focused #use-location-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 1;
+}
+#use-location-button svg {
+  margin-right: 0.5rem;
 }
 
-
-#location-info{
-	font-size: 3rem;
-	font-family: ubuntu;
-	padding: 1rem;
-	border-top-left-radius: 1rem;
-	border-top-right-radius: 1rem;
-	color: rgb(0 0 0 / 70%);
-	background-color: rgb(255 255 255 / 50%);
+#app {
+  width: 98%;
+  padding: 1rem;
+  background-color: rgb(255 255 255 / 30%);
+  margin: auto;
+  border-radius: 1rem;
 }
 
-.daily-weather-info{
-	margin-bottom: 1rem;
-	padding: 1rem;
-	background-color: rgb(255 255 255 / 50%);
-	border-radius: 1rem;
+#location-info {
+  font-size: 3rem;
+  font-family: ubuntu;
+  padding: 1rem;
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
+  color: rgb(0 0 0 / 70%);
+  background-color: rgb(255 255 255 / 50%);
 }
 
-#app  .daily-weather-info:nth-child(2){
-	border-top-right-radius: 0;
-	border-top-left-radius: 0;
-} 
-
-.daily-weather-info-head{
-	height: auto;
-	margin-bottom: 1rem;
-	font-size: 1.8rem;
-	font-family: sans-serif;
-	color: rgb(0 0 0 / 70%);
-	display: flex;
-	align-items: center;
+.daily-weather-info {
+  margin-bottom: 1rem;
+  padding: 1rem;
+  background-color: rgb(255 255 255 / 50%);
+  border-radius: 1rem;
 }
 
-.daily-weather-date{
-	flex: 1;
-	height: 100%;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	padding: 0 0.5rem;
+#app .daily-weather-info:nth-child(2) {
+  border-top-right-radius: 0;
+  border-top-left-radius: 0;
 }
 
-.daily-weather-icon{
-	flex: 1;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
+.daily-weather-info-head {
+  height: auto;
+  margin-bottom: 1rem;
+  font-size: 1.8rem;
+  font-family: sans-serif;
+  color: rgb(0 0 0 / 70%);
+  display: flex;
+  align-items: center;
 }
 
-.daily-weather-icon > img{
-	margin-bottom: 0.5rem;
-	width: 4rem;
-	height: auto;
-	-webkit-filter: drop-shadow(5px 5px 5px #222);
-  	filter: drop-shadow(5px 5px 5px rgb(0 0 0 / 30%));
+.daily-weather-date {
+  flex: 1;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 0 0.5rem;
 }
 
-.daily-weather-icon > p{
-	font-size: 1.7rem;
-	text-align: center;
+.daily-weather-icon {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.daily-weather-stats{
-	flex: 1;
-	height: 100%;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-}
-.daily-weather-stats .temp-min{
-	opacity: 0.5;
+.daily-weather-icon > img {
+  margin-bottom: 0.5rem;
+  width: 4rem;
+  height: auto;
+  -webkit-filter: drop-shadow(5px 5px 5px #222);
+  filter: drop-shadow(5px 5px 5px rgb(0 0 0 / 30%));
 }
 
-.daily-weather-info  i{
-	opacity: 0.6;
-	padding: 1rem;
-	border-radius: 50%;
-	text-align: center;
-	transition: all 0.5s;
+.daily-weather-icon > p {
+  font-size: 1.7rem;
+  text-align: center;
 }
 
-.daily-weather-info  i:hover{
-	opacity: 1;
-	background-color: rgb(0 0 0 / 10%);
+.daily-weather-stats {
+  flex: 1;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.daily-weather-stats .temp-min {
+  opacity: 0.5;
+}
+
+.daily-weather-info i {
+  opacity: 0.6;
+  padding: 1rem;
+  border-radius: 50%;
+  text-align: center;
+  transition: all 0.5s;
+}
+
+.daily-weather-info i:active {
+  opacity: 1;
+  background-color: rgb(0 0 0 / 10%);
 }
 .daily-weather-info.open i {
-	transform: rotate(-180deg);
+  transform: rotate(-180deg);
 }
 
-.daily-weather-info-div{
-	transition: all 0.5s;
-	height: 0rem;
-	opacity: 0;
+.daily-weather-info-div {
+  font-family: "Noto Sans JP", sans-serif;
+  transition: all 0.2s;
+  height: 0rem;
+  opacity: 0;
 }
-.daily-weather-info.open .daily-weather-info-div{
-	opacity: 1;
-	height: 32rem;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-}
-
-.weather-info{
-	height: 75%;
-	background-color: rgb(255 255 255 / 40%);
-	border-radius: 10px;
+.daily-weather-info.open .daily-weather-info-div {
+  opacity: 1;
+  height: 32rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
-.three-hourly-weather-div{
-	height: 24%;
-	display: flex;
-	flex-wrap: nowrap;
-	align-items: center;
-	overflow-x: scroll;
+.weather-info {
+  height: 75%;
+  padding: 1rem;
+  font-size: 2rem;
+  background-color: rgb(255 255 255 / 40%);
+  border-radius: 10px;
+  display: flex;
+  overflow: hidden;
+  transition: all 0.2s;
 }
-.three-hourly-weather-div::-webkit-scrollbar{
-	display: none;
-} 
-.three-hourly-weather-button{
-	font-size: 1.4rem;
-	height: 90%;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	min-width: 6rem;
-	margin: 0 1rem;
-	background-color: rgb(255 255 255 / 50%);
-	border-radius: 1rem;
-	box-shadow: 2px 2px 6px rgb(0 0 0 / 50%);
+
+.weather-info.night {
+  color: white;
+  background-color: rgb(0 0 0 / 70%);
+}
+
+.weather-info.night .right img {
+  filter: drop-shadow(rgb(255 255 255 / 40%));
+}
+
+.weather-info > div {
+  flex: 1;
+  height: 100%;
+  transition: all 0.4s;
+}
+
+.weather-info > .left {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  transform: translateX(-20%);
+  opacity: 0;
+}
+
+.weather-info.show .left {
+  transform: translateX(0);
+  opacity: 1;
+}
+
+.weather-info > .left .time {
+  font-size: 6rem;
+  font-weight: 700;
+}
+.weather-info > .left .weather {
+  font-size: 2rem;
+}
+
+.weather-info > .right {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  transform: translateX(20%);
+  opacity: 0;
+}
+
+.weather-info.show .right {
+  transform: translateX(0);
+  opacity: 1;
+}
+
+.weather-info > .right > .weather-img {
+  width: 100%;
+  height: 65%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.weather-info > .right .desc {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+.weather-info > .right > div > img {
+  max-width: 100%;
+  max-height: 100%;
+  filter: drop-shadow(3px 3px 4px gray);
+}
+
+.weather-info > .right .desc p {
+  text-align: center;
+}
+
+.three-hourly-weather-div {
+  height: 24%;
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: center;
+  overflow-x: scroll;
+}
+.three-hourly-weather-div::-webkit-scrollbar {
+  display: none;
+}
+.three-hourly-weather-button {
+  font-size: 1.4rem;
+  height: 90%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-width: 6rem;
+  margin: 0 1rem;
+  background-color: rgb(255 255 255 / 50%);
+  border-radius: 1rem;
+  box-shadow: 2px 2px 6px rgb(0 0 0 / 50%);
 }
 
 .three-hourly-weather-button.night {
-	background-color: rgb(0 0 0 / 80%);
-	color: rgb(255 255 255 / 80%);
+  background-color: rgb(0 0 0 / 80%);
+  color: rgb(255 255 255 / 80%);
 }
 
-
-.three-hourly-weather-button div{
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	flex: 1;
-	width: 100%;
+.three-hourly-weather-button div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex: 1;
+  width: 100%;
 }
-.three-hourly-weather-button > div > img{
-	/*flex: 1;*/
-	height: 30px;
-	width: auto;
-	filter: drop-shadow(2px 2px 3px rgb(0 0 0 / 30%));
-}
-
-.three-hourly-weather-button.night > div > img{
-	filter: drop-shadow(2px 2px 3px rgb(255 255 255 / 50%));
+.three-hourly-weather-button > div > img {
+  /*flex: 1;*/
+  height: 30px;
+  width: auto;
+  filter: drop-shadow(2px 2px 3px rgb(0 0 0 / 30%));
 }
 
+.three-hourly-weather-button.night > div > img {
+  filter: drop-shadow(2px 2px 3px rgb(255 255 255 / 50%));
+}
 
-@media(max-width:  480px){
+@media (max-width: 480px) {
+  #use-location-button {
+    font-size: 1.3rem;
+  }
 
-	html{
-		/*font-size: 8px;*/
-	}
+  .daily-weather-date,
+  .daily-weather-icon > p,
+  .daily-weather-stats {
+    font-size: 1.4rem;
+  }
 
-	#use-location-button{
-		font-size: 1.3rem;
-	}
+  .daily-weather-stats {
+    padding-left: 1rem;
+    flex: 2;
+  }
+  .weather-info > .left .time {
+    font-size: 5rem;
+  }
+  .weather-info > .left .weather {
+    font-size: 1.3rem;
+  }
 
-	.daily-weather-date, .daily-weather-icon > p, .daily-weather-stats{
-		font-size: 1.4rem;
-	}
-
-	.daily-weather-stats{
-		padding-left: 1rem;
-		flex: 2;
-	}
-
-	.three-hourly-weather-button{
-		min-width: 10rem;
-	}
+  .three-hourly-weather-button {
+    min-width: 10rem;
+  }
 }
